@@ -53,6 +53,7 @@ Change Log
      - Added Jeff's application control code to Woopsi class.
      - Added CycleButton class.
      - Merged SDL loop code into Woopsi class.
+     - Merged DS and SDL woopsifuncs files.
      - Buttons change colour when clicked.
 
   V0.31 (20080411)
